force-app/main/default/objects/Incentive__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Incentive Fulfillment</relationshipLabel>
    <relationshipName>Incentive_Fulfillment</relationshipName>
    <type>Lookup</type>
</CustomField>