force-app/main/default/objects/Incentive__c/fields/Admin_FMS__c.field-meta.xml
<CustomField>
    <fullName>Admin_FMS__c</fullName>
    <formula>Account__r.Admin_FMS__c</formula>
    <label>Admin FMS</label>
    <type>Date</type>
</CustomField>