force-app/main/default/objects/Incentive__c/fields/Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who fulfilled this request</inlineHelpText>
    <label>Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Incentive_Fulfillment_s</relationshipName>
    <type>Lookup</type>
</CustomField>