force-app/main/default/objects/Incentive__c/fields/Director_Gift_Card__c.field-meta.xml
<CustomField>
    <fullName>Director_Gift_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Director Checks to Add high level gift cards</description>
    <label>Director Gift Card</label>
    <type>Checkbox</type>
</CustomField>