force-app/main/default/objects/Incentive__c/fields/Gift_Card__c.field-meta.xml
<CustomField>
    <fullName>Gift_Card__c</fullName>
    <label>Gift Card</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Director_Gift_Card__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Starbucks</fullName>
            </value>
            <value>
                <fullName>iTunes</fullName>
            </value>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>American Express</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>