force-app/main/default/objects/Incentive__c/fields/Gift_Card_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gift_Card_Amount__c</fullName>
    <label>Gift Card Amount</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Gift_Card__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>$5</fullName>
            </value>
            <value>
                <fullName>$10</fullName>
            </value>
            <value>
                <fullName>$15</fullName>
            </value>
            <value>
                <fullName>$20</fullName>
            </value>
            <value>
                <fullName>$25</fullName>
            </value>
            <value>
                <fullName>$30</fullName>
            </value>
            <value>
                <fullName>$35</fullName>
            </value>
            <value>
                <fullName>$50</fullName>
            </value>
            <value>
                <fullName>$75</fullName>
            </value>
            <value>
                <fullName>$100</fullName>
            </value>
            <value>
                <fullName>$200</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>