force-app/main/default/objects/Incentive__c/fields/Incentive_Notes__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Notes__c</fullName>
    <inlineHelpText>Please put in any special instructions to help us fulfill this as quick as possible.</inlineHelpText>
    <label>Incentive Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>