force-app/main/default/objects/Incentive__c/fields/Inventory_Number__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Number__c</fullName>
    <label>Inventory Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>