force-app/main/default/objects/Incentive__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Incentive Fulfillment</relationshipLabel>
    <relationshipName>Incentive_Fulfillment_s</relationshipName>
    <type>Lookup</type>
</CustomField>