force-app/main/default/objects/Incentive__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Incentive Fulfillment</relationshipLabel>
    <relationshipName>Incentive_Fulfillment_s</relationshipName>
    <type>Lookup</type>
</CustomField>