force-app/main/default/objects/Incentive__c/fields/Promotional_Item__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Item__c</fullName>
    <label>Promotional Item</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>iPad Air 2</fullName>
            </value>
            <value>
                <fullName>Rebate</fullName>
            </value>
            <value>
                <fullName>AirPods</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>