force-app/main/default/objects/Incentive__c/fields/Requesting_Department__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Department__c</fullName>
    <label>Requesting Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Client Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>