force-app/main/default/objects/Incentive__c/fields/Ship_to_Address__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Address__c</fullName>
    <label>Ship to Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>