force-app/main/default/objects/Incentive__c/fields/Shipped_thru__c.field-meta.xml
<CustomField>
    <fullName>Shipped_thru__c</fullName>
    <label>Shipped thru</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FedEx</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>DHL</fullName>
            </value>
            <value>
                <fullName>USPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>