force-app/main/default/objects/Incentive__c/fields/Trial_Period__c.field-meta.xml
<CustomField>
    <fullName>Trial_Period__c</fullName>
    <formula>TEXT(Opportunity__r.RecurSoft__Trial__c)</formula>
    <label>Trial Period</label>
    <type>Text</type>
</CustomField>