force-app/main/default/objects/Incentive__c/listViews/AirPods.listView-meta.xml
<ListView>
    <fullName>AirPods</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Promotional_Item__c</columns>
    <columns>Status__c</columns>
    <columns>Trial_End_Date__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Promotional_Item__c</field>
        <operation>equals</operation>
        <value>AirPods</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Sent</value>
    </filters>
    <label>AirPods</label>
</ListView>