force-app/main/default/objects/Incentive__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Lead__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Account__c</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>