force-app/main/default/objects/Incentive__c/listViews/iPad.listView-meta.xml
<ListView>
    <fullName>iPad</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Ship_to_Address__c</columns>
    <columns>Trial_End_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Status__c</columns>
    <columns>Completed_By__c</columns>
    <columns>Delivery_Method__c</columns>
    <columns>Shipped_thru__c</columns>
    <columns>Tracking_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Promotional_Item__c</field>
        <operation>contains</operation>
        <value>iPad</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Sent</value>
    </filters>
    <label>iPad</label>
</ListView>