force-app/main/default/objects/Incentive__c/listViews/iTunes.listView-meta.xml
<ListView>
    <fullName>iTunes</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Gift_Card_Amount__c</columns>
    <columns>Email__c</columns>
    <columns>Completed_By__c</columns>
    <columns>Delivery_Method__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Gift_Card__c</field>
        <operation>equals</operation>
        <value>iTunes</value>
    </filters>
    <label>iTunes</label>
</ListView>