force-app/main/default/objects/Incentive__c/listViews/My_Unfulfilled_Incentives.listView-meta.xml
<ListView>
    <fullName>My_Unfulfilled_Incentives</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Gift_Card__c</columns>
    <columns>Gift_Card_Amount__c</columns>
    <columns>Incentive_Notes__c</columns>
    <columns>Lead__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Promotional_Item__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Requested,Pending Trial Completion</value>
    </filters>
    <label>My Unfulfilled Incentives</label>
</ListView>