force-app/main/default/objects/Incentive__c/listViews/Starbucks.listView-meta.xml
<ListView>
    <fullName>Starbucks</fullName>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Opportunity__c</columns>
    <columns>Lead__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Email__c</columns>
    <columns>Gift_Card__c</columns>
    <columns>Gift_Card_Amount__c</columns>
    <columns>Completed_By__c</columns>
    <columns>Delivery_Method__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Gift_Card__c</field>
        <operation>equals</operation>
        <value>Starbucks</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Sent</value>
    </filters>
    <label>Starbucks</label>
</ListView>