force-app/main/default/objects/Incentive__c/listViews/XAmex.listView-meta.xml
<ListView>
    <fullName>XAmex</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Account__c</columns>
    <columns>Gift_Card_Amount__c</columns>
    <columns>Ship_to_Address__c</columns>
    <columns>Trial_End_Date__c</columns>
    <columns>Completed_By__c</columns>
    <columns>Delivery_Method__c</columns>
    <columns>Shipped_thru__c</columns>
    <columns>Status__c</columns>
    <columns>Tracking_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Gift_Card__c</field>
        <operation>equals</operation>
        <value>American Express</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Sent</value>
    </filters>
    <label>Amex</label>
</ListView>